# inspector-strategies

./: .gitignore  README.md  index.html
benchmarks/: ProxyAppsInfo.txt
benchmarks/HPCCG-1.0-mod/: HPC_sparsemv-CSR-schedRuntime.cpp  HPC_sparsemv-CSR-schedStatic.cpp  HPC_sparsemv-CSR.cpp  HPC_sparsemv-schedRuntime.cpp  HPC_sparsemv-schedStatic.cpp  HPC_sparsemv.cpp  Makefile  Readme-mod.txt
benchmarks/HPCCGExperiments/: Readme.txt  rawdata.xlsx  results.xlsx  runAll
benchmarks/wavebench/: COO_mat.h  CmdParams.cpp  CmdParams.h  Makefile  Makefile.TAU.blacklight  loop_instru.txt  pompregions.c  small_test_5x5.mm  timer.cpp  wavebench  wavebench-driver.cpp  wavebench-tau-debug.pbs  wavebench.fields  (+3 more)
code/: Holmakefile  PseudoC.sml  ast.sml  astTest.sml  environment.sig  environment.sml  environmentTest.sml  evalpc.ML  fastwaveScript.sml  find_waves_fast_in_HOL4_grammar.txt  primitives.sig  primitives.sml  variants1Dloop.sml  variants1DloopTest.sml  wavebench-ast.sml  wavebench.sml
code/CtoPseudoCLanguageC/: CtoPseudoCLanguageC.cabal  Readme.txt  expr.c  expr.pp.c  expr.pp.c.astDump  gettingStarted.hs  test-noHeader.c  test.c  varAssign.c  varAssign.c.astDump  varAssign.pp.c  varAssign.pp.c.astDump  varDecl.c  varDecl.c.astDump  varDecl.pp.c  varDecl.pp.c.astDump
code/CtoPseudoCLanguageC/src/: CtoPseudoCParser.hs  Main.hs  Parser.hs
code/CtoPseudoCLanguageC/tests/: fastwave.c  fastwave.tree  test.c
code/WavefrontPIESinHaskell/: .project  WavefrontPIESinHaskell.cabal
code/WavefrontPIESinHaskell/.dist-buildwrapper/: WavefrontPIESinHaskell.cabal
code/WavefrontPIESinHaskell/.dist-buildwrapper/src/: Main.hs
code/WavefrontPIESinHaskell/src/: Main.hs  PseudoC.hs
hol/: Holmakefile  PseudoCLib.sml  PseudoCNAGScript.sml  PseudoCPropsScript.sml  PseudoCScript.sml  actionGraphScript.sml  astLib.sml  astScript.sml  dagScript.sml  datadepsScript.sml  forparConvertScript.sml  indexedListsScript.sml  listRangeScript.sml  monadicPrimitivesScript.sml  nagScript.sml  newddepsScript.sml  packScript.sml  primitivesScript.sml  simpleLoopScript.sml  wavefrontsScript.sml
(+779 files in other folders)
