name:           WavefrontPIESinHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         mstrout

library
  hs-source-dirs:  src
  build-depends:   base >= 4, PseudoCDefinition
  ghc-options:     -Wall

executable WavefrontPIESinHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, PseudoCDefinition
  ghc-options:     -Wall

